Bug 1309587 - PreventDefault() on suppressed/delayed key events that are sent back to parent. r=smaug

--HG--
extra : rebase_source : 0762ef1284c063c9716a963bf40ff5cc82b48326