layout/base/nsPresShell.cpp
@@ -7513,6 +7513,7 @@ PresShell::HandleEvent(nsIFrame* aFrame,
         delete event;
       }
     }
+    aEvent->mFlags.mIsSuppressedOrDelayed = true;
     return NS_OK;
   }
 
